  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified

index.jsp:
----------------------
* Use rounded corners on the right of the page (CC-113). Patch by Mark Doliner

Macker:
----------------------
* Add support for Macker in HTMLEmailPublisher and reporting/JSP app. Patch by Andrew Sadler

P4:
----------------------
* Use double quote only on Windows, single quote otherwise.

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

SCPPublisher:
----------------------
* No longer remove first char from xml log file path, since it now causes errors. Patch by Dan Penhurst

VSS(Journal):
----------------------
* Create SimpleDateFormats with Locale.US to fix JUnit build failure on Chinese Windows systems (CC-153 & CC-156)


CruiseControl Release Notes - 2.2.1

AlwaysBuild:
----------------------
* Configurable username for reported Modification

AntBootstrapper:
----------------------
* Submitted by Robert Smith

AntBuilder:
----------------------
* Changed command to run internal ant to use the -lib switch and only include ant-launcher.jar on the classpath.
  This should fix the error where optional tasks couldn't be found by Ant even though they where present on the classpath
* Added useQuiet attribute to call Ant using -quiet, which is mutually exclusive with useDebug
* Corrected documentation for uselogger and usedebug and added docs for usequiet
* Added saveLogDir attribute where a copy of the ant log will be saved. Patch by Jeremy Whitlock

AntBuilderTest:
----------------------
* Removed test for Ant 1.4 logfile containing invalid processing instruction, since it could fail the build with some XML Parsers.